<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Profil">

    <ImageView
        android:id="@+id/bgprofil"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@drawable/gradient_bg"
        android:contentDescription="@string/bg_profil"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <!--        app:srcCompat="@drawable/warna_bg_profil"-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/nama_mahir"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgprofil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth="wrap_content" />

    <ImageView
        android:id="@+id/backIco"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back" />

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/icon_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_search" />

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/icon_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_menu" />

    <ImageView
        android:id="@+id/backgorun_profil"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/bg_profil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bunder"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="90dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profil"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/profil"
        android:scaleType="centerCrop"
        android:src="@drawable/bernard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImageView" />

    <TextView
        android:id="@+id/namaakun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nama_mahir"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backgorun_profil"  />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/username"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaakun"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/bio"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="6dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/pekerjaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/pekerjaan"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tas_kerja"
        app:layout_constraintTop_toBottomOf="@id/bio"
        android:layout_marginTop="6dp"
        android:layout_marginStart="28dp" />

    <TextView
        android:id="@+id/alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/alamat"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pekerjaan"
        android:layout_marginTop="6dp"
        android:layout_marginStart="38dp" />

    <TextView
        android:id="@+id/joined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="Joined June 1945"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/calendar"
        app:layout_constraintTop_toBottomOf="@id/alamat"
        android:layout_marginTop="6dp"
        android:layout_marginStart="22dp" />

    <TextView
        android:id="@+id/totalFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="1 156K"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/namaakun"
        app:layout_constraintTop_toBottomOf="@id/backgorun_profil"
        android:layout_marginTop="8dp"
        android:layout_marginStart="135dp" />

    <TextView
        android:id="@+id/Following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="Following"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/totalFollowing"
        app:layout_constraintTop_toBottomOf="@id/backgorun_profil"
        android:layout_marginTop="8dp"
        android:layout_marginStart="48dp" />

    <TextView
        android:id="@+id/totalFollower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="22,1K"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/Following"
        app:layout_constraintTop_toBottomOf="@id/backgorun_profil"
        android:layout_marginTop="8dp"
        android:layout_marginStart="70dp" />

    <TextView
        android:id="@+id/Follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="Follower"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/totalFollower"
        app:layout_constraintTop_toBottomOf="@id/backgorun_profil"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/Tweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="Tweets"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/joined"
        android:layout_marginTop="24dp"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/Tweetsandreplies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="Tweets &amp; Replies"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/Tweets"
        app:layout_constraintBottom_toBottomOf="@id/garistweet"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp" />

    <TextView
        android:id="@+id/Media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="Media"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/Tweetsandreplies"
        app:layout_constraintBottom_toBottomOf="@id/garistweet"
        android:layout_marginStart="140dp" />

    <TextView
        android:id="@+id/Likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="Likes"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/Media"
        app:layout_constraintBottom_toBottomOf="@id/garistweet"
        android:layout_marginStart="80dp" />

    <View
        android:id="@+id/garistweet"
        android:layout_width="340dp"
        android:layout_height="0.4dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/garis_hitam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Tweets" />

    <View
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/garis_biru"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/garistweet" />

    <ImageView
        android:id="@+id/tas_kerja"
        android:layout_width="27dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/tas_kerja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bio"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="286dp" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tas_kerja"
        app:srcCompat="@drawable/location" />

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="17dp"
        android:layout_height="18dp"
        app:srcCompat="@drawable/calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp" />

    <ImageView
        android:id="@+id/linkIcon"
        android:layout_width="19dp"
        android:layout_height="19dp"
        app:srcCompat="@drawable/link"
        app:layout_constraintStart_toStartOf="@id/alamat"
        app:layout_constraintTop_toBottomOf="@id/pekerjaan"
        android:layout_marginStart="126dp"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:text="@string/alamat"
        android:textColor="@color/BiruCerah"
        app:layout_constraintStart_toStartOf="@id/linkIcon"
        app:layout_constraintTop_toBottomOf="@id/pekerjaan" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilmini"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/profil"
        android:scaleType="centerCrop"
        android:src="@drawable/bernard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/garistweet"
        app:shapeAppearanceOverlay="@style/CircleImageView" />


    <ImageView
        android:id="@+id/pin"
        android:layout_width="19dp"
        android:layout_height="21dp"
        app:srcCompat="@drawable/pin"
        app:layout_constraintTop_toBottomOf="@id/garistweet"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="76dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/pinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pinned Tweet"
        app:layout_constraintStart_toStartOf="@id/pin"
        app:layout_constraintTop_toBottomOf="@id/garistweet"
        android:layout_marginTop="10dp"
        android:layout_marginStart="36dp" />

    <TextView
        android:id="@+id/namemini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_mahir"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/pinText"
        app:layout_constraintStart_toEndOf="@id/profilmini"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="483dp" />

    <TextView
        android:id="@+id/usernamemini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernamemini"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/pinText"
        app:layout_constraintStart_toEndOf="@id/namemini"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
/>

    <TextView
        android:id="@+id/post1"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/post1"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/namemini"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/post2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/post2"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post1"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/bgpost"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/frame_bulat_biru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="+"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="43sp"
        app:layout_constraintBottom_toBottomOf="@id/bgpost"
        app:layout_constraintEnd_toEndOf="@id/bgpost"
        app:layout_constraintStart_toStartOf="@id/bgpost"
        app:layout_constraintTop_toTopOf="@id/bgpost" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/editprofil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bgprofil"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>